# SkiaNative.Avalonia

./: .gitignore  .gitmodules  Directory.Build.props  Directory.Build.rsp  Directory.Packages.props  README.md  SkiaNative.Avalonia.slnx
eng/: build-native.sh  measure-sample-memory-macos.sh  smoke-sample-macos.sh
native/SkiaNative.Avalonia/: CMakeLists.txt
native/SkiaNative.Avalonia/include/: SkiaNativeApi.h
native/SkiaNative.Avalonia/src/: SkiaNativeApi.cpp
samples/GaussianSplats.Metal.Cpp/: CMakeLists.txt  README.md
samples/GaussianSplats.Metal.Cpp/src/: main.mm
samples/MeshArena.SkiaSharp.Uno/: MeshArena.SkiaSharp.Uno.sln  global.json
samples/MeshArena.SkiaSharp.Uno/MeshArena.SkiaSharp.Uno/: App.xaml  App.xaml.cs  MainPage.cs  MeshArena.SkiaSharp.Uno.csproj  ReadMe.md  app.manifest
samples/MeshArena.SkiaSharp.Uno/MeshArena.SkiaSharp.Uno/Controls/: MeshArenaSurface.cs
samples/MeshArena.SkiaSharp.Uno/MeshArena.SkiaSharp.Uno/Properties/: launchSettings.json
samples/MeshArena.SkiaSharp.Uno/MeshArena.SkiaSharp.Uno/Strings/en/: Resources.resw
samples/MeshModeler.SkiaNative.Cpp/: CMakeLists.txt  README.md
samples/MeshModeler.SkiaNative.Cpp/src/: main.mm
samples/MeshModeler.SkiaSharp.Uno/: MeshModeler.SkiaSharp.Uno.sln
samples/MeshModeler.SkiaSharp.Uno/MeshModeler.SkiaSharp.Uno/: App.xaml  App.xaml.cs  GlobalUsings.cs  MainPage.cs  MeshModeler.SkiaSharp.Uno.csproj  PLAN.md  ReadMe.md  app.manifest
samples/MeshModeler.SkiaSharp.Uno/MeshModeler.SkiaSharp.Uno/Controls/: MeshModelerSurface.cs
samples/MeshModeler.SkiaSharp.Uno/MeshModeler.SkiaSharp.Uno/Properties/: launchSettings.json
samples/MeshModeler.SkiaSharp.Uno/MeshModeler.SkiaSharp.Uno/Strings/en/: Resources.resw
samples/MeshParticles.SkiaSharp.Uno/: Directory.Packages.props  MeshParticles.SkiaSharp.Uno.sln
samples/MeshParticles.SkiaSharp.Uno/MeshParticles.SkiaSharp.Uno/: App.xaml  App.xaml.cs  MainPage.cs  MeshParticles.SkiaSharp.Uno.csproj  ReadMe.md  app.manifest
samples/MeshParticles.SkiaSharp.Uno/MeshParticles.SkiaSharp.Uno/Controls/: MeshParticlesSurface.cs
samples/MeshParticles.SkiaSharp.Uno/MeshParticles.SkiaSharp.Uno/Properties/: launchSettings.json
samples/MeshParticles.SkiaSharp.Uno/MeshParticles.SkiaSharp.Uno/Strings/en/: Resources.resw
samples/MotionMark.SkiaNative.Avalonia/: App.cs  MainView.cs  MainWindowViewModel.cs  MotionMark.SkiaNative.Avalonia.csproj  MotionMarkSampleOptions.cs  Program.cs
samples/MotionMark.SkiaNative.Avalonia/Controls/: MotionMarkSurface.cs
samples/MotionMark.SkiaNative.Avalonia/Rendering/: FrameStats.cs  MotionMarkScene.cs
samples/SkiaNative.Avalonia.Sample/: Program.cs  SkiaNative.Avalonia.Sample.csproj
src/SkiaNative.Avalonia/Backend/: NativeDrawingContext.cs
src/SkiaNative.Avalonia/Direct/: SkiaNativeDirectApi.cs
src/SkiaNative.Avalonia/Interop/: CommandBuffer.cs  NativeHandles.cs  NativeMethods.cs  NativeTypes.cs
tests/SkiaNative.Avalonia.Tests/: AbiTests.cs
